make extra copy jobs in FileTreePrepare more robust